--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+nodejs-pkg-tools (0.1.1) UNRELEASED; urgency=low
+
+  [ Wade Simmons ]
+  * add TODOs
+  * remove echo
+
+  [ SimpleGeo Nerds ]
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Thu, 12 May 2011 23:35:22 +0000
+
 nodejs-pkg-tools (0.1.0) unstable; urgency=low
 
   * Debianized
