--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-pkg-tools (0.1.30) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Mon, 27 Jun 2011 00:25:25 +0000
+
 nodejs-pkg-tools (0.1.1) UNRELEASED; urgency=low
 
   [ Wade Simmons ]
