--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-pkg-tools (0.1.31) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Tue, 28 Jun 2011 06:01:53 +0000
+
 nodejs-pkg-tools (0.1.30) UNRELEASED; urgency=low
 
   * UNRELEASED
