Prepared changelog for build 33

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-pkg-tools (0.1.33) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Thu, 30 Jun 2011 08:01:25 +0000
+
 nodejs-pkg-tools (0.1.31) UNRELEASED; urgency=low
 
   * UNRELEASED
