Prepared changelog for build 37

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-pkg-tools (0.1.37) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Fri, 01 Jul 2011 23:34:52 +0000
+
 nodejs-pkg-tools (0.1.36) UNRELEASED; urgency=low
 
   * UNRELEASED
