Prepared changelog for build 38

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-pkg-tools (0.1.38) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Tue, 05 Jul 2011 21:03:41 +0000
+
 nodejs-pkg-tools (0.1.37) UNRELEASED; urgency=low
 
   * UNRELEASED
