Prepared changelog for build 39

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-pkg-tools (0.1.39) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Sun, 17 Jul 2011 13:34:07 +0000
+
 nodejs-pkg-tools (0.1.38) UNRELEASED; urgency=low
 
   * UNRELEASED
