--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-pkg-tools (0.1.40) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Mon, 25 Jul 2011 23:57:14 +0000
+
 nodejs-pkg-tools (0.1.39) UNRELEASED; urgency=low
 
   * UNRELEASED
