Prepared changelog for build 41

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-pkg-tools (0.1.41) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Wed, 03 Aug 2011 18:30:03 +0000
+
 nodejs-pkg-tools (0.1.40) UNRELEASED; urgency=low
 
   * UNRELEASED
