Prepared changelog for build 42

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-pkg-tools (0.1.42) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Sat, 06 Aug 2011 00:44:27 +0000
+
 nodejs-pkg-tools (0.1.41) UNRELEASED; urgency=low
 
   * UNRELEASED
