--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-pkg-tools (0.1.43) UNRELEASED; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Fri, 09 Dec 2011 01:01:27 +0000
+
 nodejs-pkg-tools (0.1.42) UNRELEASED; urgency=low
 
   * UNRELEASED
